--- a/views/error-layout.hbs
+++ b/views/error-layout.hbs
@@ -17,14 +17,12 @@
 <body class="bg-secondary">
 
   <main role="main" class="container-fluid">
-
-      {{{content}}}
-
+    {{{content}}}
   </main>
 
   <footer class="footer swatch-900 mt-4">
     <div class="container">
-      <p class="text-center">Curso de hapi.js - <a href="https://platzi.com" target="blank"><img src="images/logo-platzi.png" class="small-logo" /></a> &copy; 2019</p>
+      <p class="text-center">Curso de hapi.js - <a href="https://platzi.com" target="blank"><img src="assets/images/logo-platzi.png" class="small-logo" /></a> &copy; 2019</p>
     </div>
   </footer>
 
