--- a/views/question.hbs
+++ b/views/question.hbs
@@ -2,6 +2,12 @@
       <div class="alert alert-primary" role="alert">
         <h4 class="alert-heading">{{question.title}}</h4>
         <p>{{question.description}}</p>
+        {{#with question.filename}}
+          <p class="text-center">
+            <img src="/assets/uploads/{{this}}" alt="max-width:80%">
+          </p>
+          <hr>
+        {{/with}}
         <p class="mb-0">Creada por <strong>{{question.owner.name}}</strong></p>
       </div>
 
@@ -11,6 +17,7 @@
                         {{/if}}" role="alert">
         <p>{{answer.text}}</p>
         <hr>
+        
         <div class="container">
           <div class="row">
             <div class="col-sm">
