--- a/views/ask.hbs
+++ b/views/ask.hbs
@@ -29,6 +29,7 @@
                         accept="image/png">
                 </div>
             <div class="text-center mt-5">
+                <input type="hidden" name="crumb" value="{{crumb}}">
                 <button type="submit" class="btn btn-primary">Crear Pregunta</button>
             </div>
             </form>
